<resources>
    <string name="app_name">BankCardsDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_cards">Cards</string>
    <string name="str_add_card">Add Card</string>
    <string name="str_enter_your_card">Enter your card information</string>
    <string name="str_card_number">Card number</string>
    <string name="str_char_number_hint">0000 0000 0000 0000</string>
    <string name="str_expiration_date">Expiration date</string>
    <string name="str_mm_yy">MM/YY</string>
    <string name="str_mln_uzs">100000.00 UZS</string>
    <string name="str_number_card">8600123412341234</string>
    <string name="str_date">09/26</string>
    <string name="str_holder_name">Card holder name</string>
    <string name="str_succes_card_add">Card has been created successfully</string>
    <string name="str_info_invalid_card">The card information is incorrect. Please check it out!</string>
    <string name="str_network_on">Connection turned ON</string>
    <string name="str_network_off">Connection turned OFF</string>
</resources>