<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_card_fon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/teal_200"
        app:shapeAppearanceOverlay="@style/corner_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/white"
                app:shapeAppearanceOverlay="@style/corner_border" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_card_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_visa"
                app:shapeAppearanceOverlay="@style/corner_border" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="#65000000"
                app:shapeAppearanceOverlay="@style/corner_border" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_balance"
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_mln_uzs"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_card_number"
                        style="@style/RegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_number_card"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_card_date"
                        style="@style/RegularText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/str_date"
                        android:textColor="@color/white" />

                </LinearLayout>

                <TextView
                    style="@style/LightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/str_holder_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>


        </FrameLayout>

    </LinearLayout>

</FrameLayout>