<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".ui.cardlist.CardListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/back_color"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/iv_back"
                style="@style/IconImage"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/str_add_card" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_color"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="15dp">


            <TextView
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_enter_your_card" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            style="@style/LightText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_card_number" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/OutlineEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/card_number"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/poppins"
                                android:hint="@string/str_char_number_hint"
                                android:inputType="number"
                                android:maxLength="19" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            style="@style/LightText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/str_expiration_date" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/OutlineEditText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/expiration_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:fontFamily="@font/poppins"
                                    android:hint="@string/str_mm_yy"
                                    android:inputType="number"
                                    android:maxLength="5" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="100dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_card"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/str_add_card"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@color/purple_200"
                    app:cornerRadius="10dp" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/purple_500"
                    android:visibility="invisible" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>